[tool.poetry]
name = "fastapi-html"
version = "0.1.0"
description = ""
authors = ["eugeneyan <eugeneyanziyou@gmail.com>"]

[tool.poetry.dependencies]
python 
fastapi
jinja2
uvicorn
python-multipart
aiofiles

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
